app/main/default/objects/object97__c/fields/Auto_Number__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>