app/main/default/objects/object97__c/fields/Test1237__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test1237__c</fullName>
        <label>Test1237</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>