app/main/default/objects/object97__c/fields/testfield100__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield100__c</fullName>
        <description>Test</description>
        <label>testfield100</label>
        <type>Url</type>
    </fields>
</CustomObject>