app/main/default/objects/object97__c/fields/testfield112__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield112__c</fullName>
        <description>Test</description>
        <label>testfield112</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>